@@ -1,49 +1,12 @@
-# $NetBSD: Makefile.depends,v 1.13 2005/06/01 18:03:06 jlam Exp $
+# $NetBSD: Makefile.depends,v 1.14 2005/06/01 18:45:46 jmmv Exp $
 #
 
 DEPENDS+=	mplayer-share>=${MPLAYER_PKG_VERSION}:../../multimedia/mplayer-share
 
 GCC_REQD+=	2.95.3
 
-.if ${OPSYS} == "FreeBSD" || ${OPSYS} == "Linux" || ${OPSYS} == "NetBSD"
-.  include "../../audio/cdparanoia/buildlink3.mk"
-.endif
-
 .if ${OPSYS} == "NetBSD"
 .  include "../../devel/binutils/buildlink3.mk"
 .endif
-
-.if ${MACHINE_ARCH} == "i386"
-DEPENDS+=	win32-codecs>=011227:../../multimedia/win32-codecs
-.endif
-
-.if ${MACHINE_ARCH} == "i386" || ${MACHINE_ARCH} == "powerpc" || ${MACHINE_ARCH} == "alpha"
-DEPENDS+=	realplayer-codecs>=8nb2:../../multimedia/realplayer-codecs
-.endif
-
-
-.for drv pkg val in ${MPLAYER_DRIVERS}
-.  if empty(MPLAYER_DISABLE_DRIVERS:M${drv})
-.    include "../../${pkg}/buildlink3.mk"
-.  endif
-.endfor
-
-.include "../../audio/libmad/buildlink3.mk"
-.include "../../audio/libvorbis/buildlink3.mk"
 .include "../../converters/libiconv/buildlink3.mk"
-.include "../../graphics/jpeg/buildlink3.mk"
-.include "../../graphics/libungif/buildlink3.mk"
-.include "../../graphics/png/buildlink3.mk"
-.include "../../multimedia/libdvdread/buildlink3.mk"
-.include "../../multimedia/libdv/buildlink3.mk"
-.include "../../multimedia/libtheora/buildlink3.mk"
-
-.if ${MACHINE_ARCH} == "i386"
-.  include "../../multimedia/xvidcore/buildlink3.mk"
-.endif
-
-.if defined(USE_OSS)
-.  include "../../mk/ossaudio.buildlink3.mk"
-.endif
-
 .include "../../mk/x11.buildlink3.mk"
